--- a/CodeFormatter/CodeFormat/Info.plist
+++ b/CodeFormatter/CodeFormat/Info.plist
@@ -44,6 +44,6 @@
 		<string>com.apple.dt.Xcode.extension.source-editor</string>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017年 VIctorChee. All rights reserved.</string>
+	<string>Copyright © 2017年 VictorChee. All rights reserved.</string>
 </dict>
 </plist>
